--- a/README.tex
+++ b/README.tex
@@ -1,4 +1,4 @@
-% Created 2021-01-24 Sun 23:42
+% Created 2021-01-25 Mon 00:48
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -37,7 +37,7 @@
 \end{center}
 
 \section*{Nedir?}
-\label{sec:orgb10dfbd}
+\label{sec:org5353d6b}
 Yazılım Gündemi, benim \href{https://teknoseyir.com/u/erenhatirnaz/blog}{TeknoSeyir Sosyal} platformunda 2019-2020 yılları
 arasında her hafta düzenli olarak yazmaya çalıştığım bir yazı serisidir. Bu
 yazı serisi kapsamında, her hafta, o hafta içerisinde programlamanın çeşitli
@@ -53,10 +53,10 @@ yazı serisine ara verdim.
 Şunu da şöylemeliyim ki: Bu gündem yazıları o hafta içerisinde yazılım
 dünyasında olan her şeyi kapsama garantisi vermiyor. Takip ettiğim
 kaynaklarda karşıma çıkan güncel haberleri gündem yazıları içerisine
-alıyordum. Takip ettiğim kaynakları aşağıdaki \hyperref[sec:orgb26d44d]{Kaynaklar} bölümünde
+alıyordum. Takip ettiğim kaynakları aşağıdaki \hyperref[sec:org2a0bcb1]{Kaynaklar} bölümünde
 bulabilirsiniz.
 \section*{Motivasyon}
-\label{sec:org1dd7344}
+\label{sec:orgfa520f8}
 TeknoSeyir'in en çok tükettiğim içerikleri Gündem Değerlendirmeleri
 (teknoloji, oyun ve bilim). Her ne kadar teknoloji sektörünün içerisinden
 birisi de olsam teknoloji gündemini o kadar sık takip edemiyorum. Aynı çekilde
@@ -77,16 +77,16 @@ ettiler fakat ben kendimi yazarak daha iyi ifade edebildiğimi düşündüğüm 
 girmedim o işlere. Ama günün birinde o yeteneklerimi de geliştirirsem neden
 olmasın :).
 \section*{Arşiv}
-\label{sec:org9538b81}
+\label{sec:org80a82d9}
 Yazılım Gündemi yazılarının \textbf{HTML}, \textbf{PDF} ve \textbf{ORG} formatındaki sürümlerini
 aşağıdaki listeden bulabilirsiniz.
 
-\textbf{\textbf{Toplam gündem sayısı:}} 49
+\textbf{Toplam gündem sayısı:} 49
 
-\textbf{\textbf{Toplam özel yazı sayısı:}} 1
+\textbf{Toplam özel yazı sayısı:} 1
 
 \subsection*{2020}
-\label{sec:org8bfe236}
+\label{sec:org897f53c}
 \begin{center}
 \begin{tabular}{lllll}
 \hline
@@ -120,7 +120,7 @@ Yazılım Gündemi - 2020/01 & 1-5 Ocak 2020 & \href{arsiv/2020/01/yazilim-gunde
 \end{tabular}
 \end{center}
 \subsection*{2019}
-\label{sec:orgc5d7549}
+\label{sec:org3b51c0d}
 \begin{center}
 \begin{tabular}{lllll}
 \hline
@@ -151,7 +151,7 @@ Yazılım Gündemi - 01 & 8-14 Temmuz 2019 & \href{arsiv/2019/01/yazilim-gundemi
 \end{tabular}
 \end{center}
 \subsection*{Özel Yazılar}
-\label{sec:org4902dac}
+\label{sec:org64b1a45}
 \begin{center}
 \begin{tabular}{lllll}
 \hline
@@ -160,7 +160,7 @@ Yazılım Gündemi - 01 & 8-14 Temmuz 2019 & \href{arsiv/2019/01/yazilim-gundemi
 \end{tabular}
 \end{center}
 \section*{Kaynaklar}
-\label{sec:orgb26d44d}
+\label{sec:org2a0bcb1}
 Yazılım Gündemi yazılarındaki haberleri topladığım kaynaklar:
 \begin{itemize}
 \item \href{https://news.ycombinator.com/news}{HackerNews}
@@ -192,7 +192,7 @@ oluşturduğum Custom Feed'im: \href{https://www.reddit.com/user/erenhatirnaz/m/
 \end{itemize}
 \end{itemize}
 \section*{Kullandığım Araçlar}
-\label{sec:orgfdcb8fe}
+\label{sec:orgcc798e1}
 Yazılım Gündemi yazılarını \href{https://www.gnu.org/software/emacs/}{Emacs} metin editörü içerisinde \href{https://orgmode.org}{Org-mode} dokümanı
 şeklinde yazıyorum. HTML ve PDF çıktılarını da bu ORG modu dokümanından \href{https://orgmode.org/manual/Exporting.html\#Exporting}{elde
 ediyorum}. PDF formatındaki yazılar aslında \LaTeX{} üzerinden derlenip,
@@ -218,7 +218,7 @@ ihtiyacınız olacak. Bunun için \href{ayarlar.el}{ayarlar.el} dosyasına göz 
 zamanımda motivasyon bulabilirsem, yazım süreci ve teknik tarafla ilgili daha
 çok bilgi içeren bir yazı hazırlarım.
 \section*{Bilinen Sorunlar}
-\label{sec:org1ff8adc}
+\label{sec:org68c4b67}
 \begin{itemize}
 \item Yazıların içerisinde eklediğim GIF (hareketli görseller), yazının PDF
 formatındaki halinde sadece bağlantı olarak gösteriliyor. \href{img/pdf-gif-link-sorun.png}{Örnek}
@@ -243,7 +243,7 @@ bırakıyorum.
 \end{itemize}
 \end{itemize}
 \section*{Lisans}
-\label{sec:org3a627ef}
+\label{sec:orgeb11790}
 \begin{center}
 \begin{center}
 \includegraphics[height=1.5cm]{img/CC_BY-NC-SA_4.0.png}
